continued with mandatory 01 and added stuff from class

--- a/04_FourthClass/Upper/package.json
+++ b/04_FourthClass/Upper/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/NicolasJavierJan/NodeJS#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "escape-html": "^1.0.3",
+    "express": "^4.18.2",
+    "sentiment": "^5.0.2"
   }
 }
