--- a/Mandatory02/server/.env_template
+++ b/Mandatory02/server/.env_template
@@ -1,3 +1,4 @@
 Save this file as ".env" and replace the value of the variables with your own preferred values.
 
 SESSION_SECRET = *your session secret*
+ADMIN_PASSWORD = *your admin password*
