--- a/Mandatory02/server/package.json
+++ b/Mandatory02/server/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "reset-database": "node ./databases/createDatabase.js delete_mode",
+    "create-database": "node ./databases/createDatabase.js"
   },
   "author": "Nicolas Javier Jan",
   "license": "ISC",
@@ -19,6 +21,8 @@
     "helmet": "^6.1.5",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
-    "rate-limit": "^0.1.1"
+    "rate-limit": "^0.1.1",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.6"
   }
 }
